Fixing balances + aligning stake button

--- a/dapp/src/components/ConnectButton/styles.scss
+++ b/dapp/src/components/ConnectButton/styles.scss
@@ -1,7 +1,6 @@
 @import '../../variables';
 
 .wallet-btn-holder {
-    max-width: 220px;
     width: 100%;
     text-align: center;
     box-shadow: 0 0 1rem 0 $header-box-shadow;
