--- a/dapp/src/components/StakeTab/styles.scss
+++ b/dapp/src/components/StakeTab/styles.scss
@@ -3,6 +3,13 @@
 .staking-info-card {
     padding: 0 !important;
 }
+
+.buttons-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .staking-button {
     padding: 0;
     width: 100%;
@@ -13,13 +20,14 @@
     min-height: 60px;
     background-color: #1e4eb4 !important;
 }
+
 .staking-info-container {
     flex-direction: column;
     align-items: flex-start;
     height: auto;
     text-align: start;
-    text-align: start;
     padding: 5px 20px 4px 4px;
+
     .staking-info-title {
         display: flex;
         justify-content: start;
@@ -30,10 +38,12 @@
         font-size: 18px;
         line-height: 42px;
     }
+
     .icon {
         opacity: 0.6 !important;
         margin-inline-end: 8px;
     }
+
     .staking-info-text {
         font-style: normal;
         font-weight: normal;
@@ -44,6 +54,7 @@
         margin-bottom: 20px;
     }
 }
+
 .staking-method-container {
     flex-direction: column;
     align-items: flex-start;
@@ -55,6 +66,7 @@
     background: rgba(99, 114, 136, 0.2);
     padding: 5px 16px;
     border-radius: 10px;
+
     .staking-method-title {
         font-weight: 500;
         font-style: normal;
@@ -63,6 +75,7 @@
         margin-right: 18px;
         color: #d8d8d8;
     }
+
     .staking-method-select {
         min-width: 125px;
         color: $white;
@@ -70,6 +83,7 @@
         margin-top: 0px;
         padding: 0px 15px !important;
     }
+
     .staking-method-estimated-gas-fee {
         font-weight: 500;
         font-style: normal;
@@ -79,11 +93,13 @@
         color: $white;
     }
 }
+
 .staking-input-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 10px 0px;
+
     .amount-to-stake-caption {
         color: $white;
         font-style: normal;
@@ -93,6 +109,7 @@
         display: flex;
         align-items: center;
     }
+
     .available-to-stake-caption {
         font-style: normal;
         font-weight: 500;
@@ -104,6 +121,7 @@
         color: $white;
         opacity: 0.5;
     }
+
     .token-balance {
         font-weight: 800;
         font-size: 16px;
@@ -113,6 +131,7 @@
         margin-left: 10px;
     }
 }
+
 .staking-input-container {
     background-color: #3f4a5f;
     height: 80px;
@@ -133,11 +152,13 @@
         width: 230px;
         margin: 0px 10px;
     }
+
     .staking-input-box {
         display: flex;
         align-items: center;
         width: 70%;
     }
+
     .staking-input-symbol {
         font-weight: 500;
         font-size: 20px;
@@ -146,6 +167,7 @@
         align-items: center;
         color: $white;
     }
+
     .staking-input-max {
         color: #ffdfbd;
         font-weight: 800;
@@ -155,6 +177,7 @@
         line-height: initial;
     }
 }
+
 @media (max-width: 600px) {
     .staking-input-header {
         flex-direction: column-reverse !important;
